--- a/gasr.html
+++ b/gasr.html
@@ -39,7 +39,7 @@
                     </li>
                 </ul>
 
-                <a href="#">Play!</a>
+                <a href="#" id="play">Play!</a>
             </nav>
         </header>
 
@@ -48,7 +48,7 @@
         <article>
             <h2>Characters</h2>
             <section>
-                <p>
+                <p class="larger">
                     <span>Name: Compost Heap</span>
                     <span>Job: Food Taster</span>
                 </p>
@@ -60,7 +60,7 @@
             </section>
 
             <section>
-                <p>
+                <p class="larger">
                     <span>Name: Felix</span>
                     <span>Job: Basket Weaver</span>
                 </p>
@@ -72,7 +72,7 @@
             </section>
 
             <section>
-                <p>
+                <p class="larger">
                     <span>Name: Robopig</span>
                     <span>Job: Dentist</span>
                 </p>
@@ -85,7 +85,7 @@
             </section>
 
             <section>
-                <p>
+                <p class="larger">
                     <span>Name: Slimy</span>
                     <span>Job: Proctologist</span>
                 </p>
@@ -97,7 +97,7 @@
             </section>
 
             <section>
-                <p>
+                <p class="larger">
                     <span>Name: Sock Monster</span>
                     <span>Job: Dragon Slayer</span>
                 </p>
